Hide mobile menu on desktop to avoid flickering

--- a/themes/mikemcfly/sass/style.sass
+++ b/themes/mikemcfly/sass/style.sass
@@ -17,7 +17,7 @@ body
 
 main
 	position: relative
-	
+
 .scotch-panel-wrapper
 	position: relative
 	overflow: hidden
@@ -49,6 +49,8 @@ main
 
 #scotch-panel
 	background: #000000
+	@media (min-width: 768px)
+		display: none
 
 	.inner
 		padding: 40px 0 0 0
